--- a/example/index.html
+++ b/example/index.html
@@ -15,6 +15,7 @@
     <!--script src="./scripts/lengthOf.js"></script-->
     <!--script src="./scripts/titleFormat.js"></script-->
     <!--script src="./scripts/stringIncludes.js"></script-->
-    <script src="./scripts/palindrome.js"></script>
+    <!--script src="./scripts/palindrome.js"></script-->
+    <script src="./scripts/math.js"></script>
 </body>
 </html>
