--- a/store/FINAL_HTML/index.html
+++ b/store/FINAL_HTML/index.html
@@ -25,6 +25,13 @@
           />
         </a>
         <form class="header-form">
+          <!--input
+            class="header-input"
+            type="text"
+            placeholder="Search"
+            id="search"
+            < onkeyup="captureText()"
+          /-->
           <input
             class="header-input"
             type="text"
@@ -187,8 +194,9 @@
       </div>
       <div class="footer-copyright">Curso de HTML + CSS 2023</div>
     </footer>
-    <script src="./scripts/layout.js" defer></script>
-    <script src="./scripts/products.js" defer></script>
-    <script src="./scripts/productCards.js" defer></script>
+    <script src="./scripts/layout.js"></script>
+    <script src="./scripts/products.js"></script>
+    <script src="./scripts/productCards.js" ></script>
+    <script src="./scripts/filterProducts.js"></script>
   </body>
 </html>
