--- a/store/FINAL_HTML/details.html
+++ b/store/FINAL_HTML/details.html
@@ -52,8 +52,8 @@
           </li>
         </ul>
       </div>
-      <nav id="navbar">
-        <li class="nav-li">
+      <nav id="nav">
+        <!--li class="nav-li">
           <a class="nav-a" href="#">Ofertas</a>
         </li>
         <li class="nav-li">
@@ -67,12 +67,12 @@
         </li>
         <li class="nav-li">
           <a class="nav-a" href="#">Garantía</a>
-        </li>
+        </li-->
       </nav>
     </header>
     <main>
-      <div class="details-container">
-        <div id="details" class="columns-container">
+      <div class="details-container" id="details">
+        <!--div id="details" class="columns-container">
           <section class="product-images-block">
             <div class="product-images">
               <img
@@ -220,12 +220,12 @@
               </div>
             </a>
           </div>
-        </div>
+        </div-->
       </div>
     </main>
     <footer>
       <div id="footer" class="footer-container">
-        <ul class="footer-ul">
+        <!--ul class="footer-ul">
           <li class="footer-main-item">
             <a class="footer-a" href="./index.html">Ofertas</a>
           </li>
@@ -279,9 +279,12 @@
           <li class="footer-main-item">
             <a class="footer-a" href="./index.html">Garantía</a>
           </li>
-        </ul>
+        </ul-->
       </div>
       <div class="footer-copyright">Curso de HTML + CSS 2023</div>
     </footer>
+    <script src="./scripts/layout.js"></script>
+    <script src="./scripts/products.js"></script>
+    <script src="./scripts/productDetail.js"></script>
   </body>
 </html>
