changeSubtotal(event) que aparece en pagina

--- a/store/FINAL_HTML/cart.html
+++ b/store/FINAL_HTML/cart.html
@@ -75,7 +75,16 @@
         <span class="hero-span">carrito</span>
       </article>
     </section>
-    <main></main>
+    <main>
+      <div class="product-container" id="products">
+        <article class="card-products" id="card-products">
+
+        </article>
+        <article class="total" id="total">
+
+        </article>
+      </div>
+    </main>
     <footer>
       <div id="footer" class="footer-container">
         <ul class="footer-ul">
@@ -136,5 +145,11 @@
       </div>
       <div class="footer-copyright">Curso de HTML + CSS 2023</div>
     </footer>
+    <script src="./scripts/layout.js"></script>
+    <script src="./scripts/products.js"></script>
+    <script src="./scripts/productCards.js" ></script>
+    <script src="./scripts/productDetail.js" ></script>
+    <script src="./scripts/filterProducts.js"></script>
+    <script src="./scripts/cart.js" ></script>
   </body>
 </html>
