Carrito finalizado (sin estilos)

--- a/store/FINAL_HTML/cart.html
+++ b/store/FINAL_HTML/cart.html
@@ -52,21 +52,6 @@
         </ul>
       </div>
       <nav id="navbar">
-        <li class="nav-li">
-          <a class="nav-a" href="#">Ofertas</a>
-        </li>
-        <li class="nav-li">
-          <a class="nav-a" href="#">Cómo comprar</a>
-        </li>
-        <li class="nav-li">
-          <a class="nav-a" href="#">Costos y tarifas</a>
-        </li>
-        <li class="nav-li">
-          <a class="nav-a" href="#">Mis pedidos</a>
-        </li>
-        <li class="nav-li">
-          <a class="nav-a" href="#">Garantía</a>
-        </li>
       </nav>
     </header>
     <section class="hero-section">
@@ -76,14 +61,10 @@
       </article>
     </section>
     <main>
-      <div class="product-container" id="products">
-        <article class="card-products" id="card-products">
-
-        </article>
-        <article class="total" id="total">
-
-        </article>
-      </div>
+      <div class="container" id="products">
+      </div>        
+      <article class="cart-resume" id="total">
+      </article>
     </main>
     <footer>
       <div id="footer" class="footer-container">
@@ -146,10 +127,7 @@
       <div class="footer-copyright">Curso de HTML + CSS 2023</div>
     </footer>
     <script src="./scripts/layout.js"></script>
-    <script src="./scripts/products.js"></script>
-    <script src="./scripts/productCards.js" ></script>
-    <script src="./scripts/productDetail.js" ></script>
-    <script src="./scripts/filterProducts.js"></script>
     <script src="./scripts/cart.js" ></script>
+    <script src="./scripts/buy.js" ></script>
   </body>
 </html>
