--- a/store/FINAL_HTML/cart.html
+++ b/store/FINAL_HTML/cart.html
@@ -128,8 +128,8 @@
       </div>
       <div class="footer-copyright">Curso de HTML + CSS 2023</div>
     </footer>
-    <script src="./scripts/layout.js"></script>
+    <script type="module" src="./scripts/layout.js"></script>
     <script src="./scripts/cart.js" ></script>
-    <script src="./scripts/buy.js" ></script>
+    <script type="module" src="./scripts/buy.js" ></script>
   </body>
 </html>
