--- a/store/FINAL_HTML/details.html
+++ b/store/FINAL_HTML/details.html
@@ -285,7 +285,7 @@
       </div>
       <div class="footer-copyright">Curso de HTML + CSS 2023</div>
     </footer>
-    <script src="./scripts/layout.js"></script>
+    <script type="module" src="./scripts/layout.js"></script>
     <script src="./scripts/products.js"></script>
     <script src="./scripts/productDetail.js"></script>
   </body>
