--- a/store/FINAL_HTML/index.html
+++ b/store/FINAL_HTML/index.html
@@ -196,9 +196,9 @@
       </div>
       <div class="footer-copyright">Curso de HTML + CSS 2023</div>
     </footer>
-    <script src="./scripts/layout.js"></script>
+    <script type="module" src="./scripts/layout.js"></script>
     <script src="./scripts/products.js"></script>
-    <script src="./scripts/productCards.js" ></script>
-    <script src="./scripts/filterProducts.js"></script>
+    <script type="module" src="./scripts/productCards.js" ></script>
+    <script type="module" src="./scripts/filterProducts.js"></script>
   </body>
 </html>
