--- a/store/FINAL_HTML/details.html
+++ b/store/FINAL_HTML/details.html
@@ -287,6 +287,6 @@
     </footer>
     <script type="module" src="./scripts/layout.js"></script>
     <script src="./scripts/products.js"></script>
-    <script src="./scripts/productDetail.js"></script>
+    <script type= "module" src="./scripts/productDetail.js"></script>
   </body>
 </html>
