--- a/store/FINAL_HTML/register.html
+++ b/store/FINAL_HTML/register.html
@@ -7,14 +7,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap"
     rel="stylesheet"
-    />
-<title>Iniciar Sesión - TiendaMia</title>
+/>
+<title>Registro - TiendaMia</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet"/>
 <script src="https://kit.fontawesome.com/938ca99d8c.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="./styles/layout.css" />
-<link rel="stylesheet" href="./styles/login.css" />
+<link rel="stylesheet" href="./styles/register.css" />
 </head>
-
 <body>
 <header>
         <div class="header-container">
@@ -71,7 +70,7 @@
         </div>
         <nav id="nav">
         </nav>
-    </header>
+</header>
 <section class="hero-section">
         <article class="hero-title">
         <span class="hero-span">tecnología</span>
@@ -79,55 +78,58 @@
         </article>
 </section>
 <main>
-    <div class="login-container">
-        <h1>Ingresar</h1>
-            <form
-                id="loginForm"
-                action="dashboard.html"
-                method="post"
-                onsubmit="return validateForm()"
-            >
-            <input
-                type="email"
-                id="email"
-                name="email"
-                placeholder="Tu dirección de E-mail"
-            />
-            <input
-                type="password"
-                id="password"
-                name="password"
-                placeholder="Contraseña"
-            />
-            <a href="#">¿Olvidaste tu contraseña?</a>
-            <input type="submit" value="Ingresar"/>
-        </form>
-        <p>
-            * Al ingresar con Facebook o Google estás aceptando recibir ofertas
-            por email
-        </p>
-        <p>
-            Tiendamia está protegida por reCAPTCHA y se aplican la
-        
-        <a href="#">Política de Privacidad</a> y los
-        <a href="#">Términos de Servicio de Google</a>.
-        </p>
-        <div class="divider">¿No tienes una cuenta?</div>
-        <div class="register-link">
-        <a href="register.html">Regístrate</a>
-        </div>
-        <p>
-            Al registrarte estás aceptando nuestros
-        <a href="#">Términos y Condiciones</a> y nuestras
-        <a href="#">Políticas de Privacidad</a>.
-        </p>
-        </div>
+    <div class="register-container">
+    <h1>Regístrate</h1>
+    <form
+        id="registerForm"
+        action="dashboard.html"
+        method="post"
+        onsubmit="return validateRegisterForm()"
+    >
+    <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder="Tu dirección de E-mail"
+    />
+    <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="Contraseña para tiendamia"
+    />
+    <p>(?) La contraseña debe tener al menos 6 caracteres.</p>
+    <div class="checkbox">
+    <input type="checkbox" id="offers" name="offers" />
+    <label for="offers">Recibir Ofertas!</label>
+    </div>
+    <input type="submit" value="Regístrate" />
+    </form>
+    <p>
+        * Al ingresar con Facebook o Google estás aceptando recibir ofertas
+        por email
+    </p>
+    <p>
+        Tiendamia está protegida por reCAPTCHA y se aplican la
+    <a href="#">Política de Privacidad</a> y los
+    <a href="#">Términos de Servicio de Google</a>.
+    </p>
+    <div class="divider">¿Ya tienes una cuenta?</div>
+    <div class="login-link">
+    <a href="login.html">Ingresar</a>
+    </div>
+    <p>
+        Al registrarte estás aceptando nuestros
+    <a href="#">Términos y Condiciones</a> y nuestras
+    <a href="#">Políticas de Privacidad</a>.
+    </p>
+    </div>
 </main>
 <footer>
     <div id="footer" class="footer-container"></div>
     <div class="footer-copyright">Curso de HTML + CSS 2024</div>
 </footer>
-<script type="module" src="./scripts/layout.js"></script>
-<script src="./scripts/login.js"></script>
+    <script type="module" src="./scripts/layout.js"></script>
+    <script src="./scripts/register.js"></script>
 </body>
 </html>
