Registro de usuarios e inicio sesión listo, falta alerta al agregar producto

--- a/store/FINAL_HTML/register.html
+++ b/store/FINAL_HTML/register.html
@@ -80,12 +80,8 @@
 <main>
     <div class="register-container">
     <h1>Regístrate</h1>
-    <form
-        id="registerForm"
-        action="dashboard.html"
-        method="post"
-        onsubmit="return validateRegisterForm()"
-    >
+    <!-- <form id="registerForm" action="dashboard.html" method="post" onsubmit="return validateRegisterForm()"> -->
+    <form id="registerForm" action="dashboard.html" method="post" onsubmit="return handleRegister(event)">
     <input
         type="email"
         id="email"
