--- a/store/FINAL_HTML/login.html
+++ b/store/FINAL_HTML/login.html
@@ -81,12 +81,8 @@
 <main>
     <div class="login-container">
         <h1>Ingresar</h1>
-            <form
-                id="loginForm"
-                action="dashboard.html"
-                method="post"
-                onsubmit="return validateForm()"
-            >
+            <!-- form id="loginForm" action="dashboard.html" method="post" onsubmit="return validateForm()"  -->
+            <form id="loginForm" action="dashboard.html" method="post" onsubmit="return handleLogin(event)">
             <input
                 type="email"
                 id="email"
@@ -128,6 +124,7 @@
     <div class="footer-copyright">Curso de HTML + CSS 2024</div>
 </footer>
 <script type="module" src="./scripts/layout.js"></script>
-<script src="./scripts/login.js"></script>
+<script  src="./scripts/login.js"></script>
+<script  src="./scripts/auth.js"></script>
 </body>
 </html>
